--- a/style.css
+++ b/style.css
@@ -440,7 +440,7 @@ table {
 /*--------------------------------------------------------------
 # Forms
 --------------------------------------------------------------*/
-.button, .page-links span:not(.page-links-title),
+.button, .page-links span:not(.page-links-title), #page #infinite-handle span button,
 button,
 input[type="button"],
 input[type="reset"],
@@ -458,7 +458,7 @@ input[type="submit"] {
   -moz-transition: 0.085s;
   transition: 0.085s;
   text-transform: uppercase; }
-  .button:hover, .page-links span:hover:not(.page-links-title),
+  .button:hover, .page-links span:hover:not(.page-links-title), #page #infinite-handle span button:hover,
   button:hover,
   input[type="button"]:hover,
   input[type="reset"]:hover,
@@ -466,7 +466,7 @@ input[type="submit"] {
     background: #fff;
     border-color: #24c48a;
     color: #24c48a; }
-  .button:active, .page-links span:active:not(.page-links-title), .button:focus, .page-links span:focus:not(.page-links-title),
+  .button:active, .page-links span:active:not(.page-links-title), #page #infinite-handle span button:active, .button:focus, .page-links span:focus:not(.page-links-title), #page #infinite-handle span button:focus,
   button:active,
   button:focus,
   input[type="button"]:active,
@@ -1778,6 +1778,20 @@ a {
 
 .infinity-end.neverending .site-footer {
   display: block; }
+
+#page #infinite-handle {
+  text-align: center; }
+  #page #infinite-handle span {
+    background: inherit;
+    border-radius: initial;
+    color: inherit;
+    cursor: pointer;
+    font-size: inherit;
+    padding: inherit; }
+
+.infinite-scroll .infinite-loader .spinner {
+  margin: 0 auto;
+  text-align: center; }
 
 /*--------------------------------------------------------------
 # Media
