Minor page setting and translation adjustments

--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -4,6 +4,11 @@
 @import "../layout/general";
 
 /*--------------------------------------------------------------
+## Page Settings
+--------------------------------------------------------------*/
+@import "../layout/page-settings";
+
+/*--------------------------------------------------------------
 ## Site Masthead
 --------------------------------------------------------------*/
 @import "header/masthead";
