--- a/sass/layout/_page-settings.scss
+++ b/sass/layout/_page-settings.scss
@@ -1,6 +1,6 @@
-/* The Page Setting related layout changes */
 .page-layout-no-sidebar,
 .page-layout-full-width {
+
     .site-main {
         margin: 0;
     }
@@ -8,15 +8,16 @@
 
 .page-layout-full-width,
 .page-layout-full-width-sidebar {
+	
     .site-content .container {
         max-width: 100%;
     }
 }
 
-.page-layout-no-masthead-margin #masthead {
-    margin-bottom: 0;
+.page-layout-no-masthead-margin .site-content {
+    padding-top: 0;
 }
 
-.page-layout-no-footer-margin #colophon {
-    margin-top: 0;
+.page-layout-no-footer-margin .site-content {
+    padding-bottom: 0;
 }
