--- a/style.css
+++ b/style.css
@@ -1099,7 +1099,6 @@ a {
 /*--------------------------------------------------------------
 ## Page Settings
 --------------------------------------------------------------*/
-/* The Page Setting related layout changes */
 .page-layout-no-sidebar .site-main,
 .page-layout-full-width .site-main {
   margin: 0; }
@@ -1108,11 +1107,11 @@ a {
 .page-layout-full-width-sidebar .site-content .container {
   max-width: 100%; }
 
-.page-layout-no-masthead-margin #masthead {
-  margin-bottom: 0; }
+.page-layout-no-masthead-margin .site-content {
+  padding-top: 0; }
 
-.page-layout-no-footer-margin #colophon {
-  margin-top: 0; }
+.page-layout-no-footer-margin .site-content {
+  padding-bottom: 0; }
 
 /*--------------------------------------------------------------
 ## Site Masthead
