--- a/sass/media/_media.scss
+++ b/sass/media/_media.scss
@@ -23,3 +23,8 @@ object {
 ## Galleries
 --------------------------------------------------------------*/
 @import "galleries";
+
+/*--------------------------------------------------------------
+## Homepage Slider
+--------------------------------------------------------------*/
+@import "home-slider";
