--- a/sass/site/header/_masthead.scss
+++ b/sass/site/header/_masthead.scss
@@ -18,15 +18,15 @@
 		text-align: center;
 
 		.site-title {
-			font-family: $font__details; 
+			font-family: $font__details;
 			font-weight: 300;
 			@include font-size(4);
 			letter-spacing: 1px;
-			line-height: normal; 
+			line-height: normal;
 			margin: 0;
 			text-align: center;
 			text-transform: uppercase;
-			
+
 			a {
 				color: $color__text-dark;
 				text-decoration: none;
@@ -34,8 +34,18 @@
 		}
 
 		.site-description {
-			margin-bottom: 0; 
+			margin-bottom: 0;
 			text-align: center;
+		}
+	}
+}
+
+.homepage-has-slider {
+	#masthead {
+		border-bottom: none;
+
+		.site-branding {
+			padding-bottom: 3em;
 		}
 	}
 }
