--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -113,17 +113,15 @@ html[xmlns] .flexslider .slides {
 .flex-direction-nav a {
   text-decoration: none;
   display: block;
-  width: 40px;
-  height: 40px;
+  width: 45px;
+  height: 45px;
   margin: -20px 0 0;
   position: absolute;
   top: 50%;
   z-index: 10;
   overflow: hidden;
-  opacity: 0;
   cursor: pointer;
   color: rgba(0, 0, 0, 0.8);
-  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -ms-transition: all 0.3s ease-in-out;
@@ -132,35 +130,27 @@ html[xmlns] .flexslider .slides {
 }
 .flex-direction-nav a:before {
   font-family: "flexslider-icon";
-  font-size: 40px;
+  font-size: 16px;
   display: inline-block;
   content: '\f001';
-  color: rgba(0, 0, 0, 0.8);
-  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
+  color: rgba(255, 255, 255, 0.7);
+  padding: 10px 17px;
+  background: rgba(0, 0, 0, 0.65);
 }
 .flex-direction-nav a.flex-next:before {
   content: '\f002';
 }
 .flex-direction-nav .flex-prev {
-  left: -50px;
+	left: 0;
 }
 .flex-direction-nav .flex-next {
-  right: -50px;
+	right: 0;
   text-align: right;
 }
-.flexslider:hover .flex-direction-nav .flex-prev {
-  opacity: 0.7;
-  left: 10px;
-}
-.flexslider:hover .flex-direction-nav .flex-prev:hover {
-  opacity: 1;
-}
-.flexslider:hover .flex-direction-nav .flex-next {
-  opacity: 0.7;
-  right: 10px;
-}
+.flexslider:hover .flex-direction-nav .flex-prev:hover,
 .flexslider:hover .flex-direction-nav .flex-next:hover {
-  opacity: 1;
+  color: rgba(255, 255, 255, 1);
+  background: rgba(0, 0, 0, 0.8);
 }
 .flex-direction-nav .flex-disabled {
   opacity: 0!important;
