--- a/sass/forms/_buttons.scss
+++ b/sass/forms/_buttons.scss
@@ -10,8 +10,10 @@ input[type="submit"] {
 	font-family: $font__details;
 	@include font-size(0.8666);
 	line-height: 1;
+	letter-spacing: .1em; 
 	padding: 1em 1.923em;
 	@include transition(0.085s);
+	text-decoration: none;
 	text-transform: uppercase;
 
 	&:hover {
