--- a/style.css
+++ b/style.css
@@ -472,10 +472,12 @@ input[type="submit"] {
   font-size: 13.8656px;
   font-size: 0.8666rem;
   line-height: 1;
+  letter-spacing: .1em;
   padding: 1em 1.923em;
   -webkit-transition: 0.085s;
   -moz-transition: 0.085s;
   transition: 0.085s;
+  text-decoration: none;
   text-transform: uppercase; }
   .button:hover, .page-links span:hover:not(.page-links-title), #page #infinite-handle span button:hover,
   button:hover,
@@ -825,7 +827,7 @@ a {
   font-size: 13.8656px;
   font-size: 0.8666rem;
   font-family: "Lato", sans-serif !important;
-  letter-spacing: 1px; }
+  letter-spacing: .1em; }
   .posts-navigation .nav-links .nav-previous span {
     margin-right: .5em; }
   .posts-navigation .nav-links .nav-next span {
@@ -1173,9 +1175,11 @@ a {
       text-align: center; }
 
 .homepage-has-slider #masthead {
-  border-bottom: none; }
-  .homepage-has-slider #masthead .site-branding {
-    padding-bottom: 3em; }
+  border-bottom: none;
+  margin-bottom: 0; }
+
+.homepage-has-slider .site-content {
+  padding-top: 0; }
 
 /*--------------------------------------------------------------
 ## Full Screen Search
@@ -1253,7 +1257,7 @@ a {
 /*--------------------------------------------------------------
 ## Posts
 --------------------------------------------------------------*/
-.entry-meta {
+.entry-meta, .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-meta {
   display: -webkit-box;
   display: -moz-box;
   display: box;
@@ -1275,17 +1279,17 @@ a {
   line-height: normal;
   text-align: center;
   text-transform: uppercase; }
-  .entry-meta span {
+  .entry-meta span, .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-meta span {
     color: #adadad;
     font-size: 12.8px;
     font-size: 0.8rem; }
-    .entry-meta span:not(:last-child):after {
+    .entry-meta span:not(:last-child):after, .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-meta span:not(:last-child):after {
       content: '\00a0\00a0/\00a0\00a0';
       padding: 0 .4166em; }
-    .entry-meta span a {
+    .entry-meta span a, .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-meta span a {
       color: inherit;
       text-decoration: none; }
-      .entry-meta span a:hover {
+      .entry-meta span a:hover, .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-meta span a:hover {
         color: #24c48a; }
 
 .entry-title {
@@ -1563,11 +1567,11 @@ a {
     @media (max-width: 480px) {
       .left-medium-loop article .entry-content {
         float: none; } }
-    .left-medium-loop article .entry-content .entry-meta {
+    .left-medium-loop article .entry-content .entry-meta, .left-medium-loop article .entry-content .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-meta, .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .left-medium-loop article .entry-content .entry-meta {
       justify-content: initial;
       margin: .45em 0 .6em; }
       @media (max-width: 480px) {
-        .left-medium-loop article .entry-content .entry-meta {
+        .left-medium-loop article .entry-content .entry-meta, .left-medium-loop article .entry-content .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-meta, .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .left-medium-loop article .entry-content .entry-meta {
           justify-content: center; } }
     .left-medium-loop article .entry-content .entry-title {
       font-size: 25.6px;
@@ -1899,91 +1903,84 @@ object {
 /*--------------------------------------------------------------
 ## Homepage Slider
 --------------------------------------------------------------*/
-.featured-posts-slider .featured-posts-slides .featured-post-slide {
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  height: 600px;
-  position: relative;
-  width: 100%; }
-  @media (max-width: 768px) {
-    .featured-posts-slider .featured-posts-slides .featured-post-slide {
-      height: 380px; } }
-  @media (max-width: 320px) {
-    .featured-posts-slider .featured-posts-slides .featured-post-slide {
-      height: 155px; } }
-  .featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content {
-    background-color: rgba(0, 0, 0, 0.12);
-    height: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
-    overflow: hidden;
-    width: 100%;
-    z-index: 3; }
-    .featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .slide-entry-link {
-      display: block;
+.flexslider.featured-posts-slider {
+  border: none; }
+  .flexslider.featured-posts-slider .flex-direction-nav a {
+    height: 50px;
+    top: 49.166%;
+    margin-top: -25px;
+    width: 40px; }
+    .flexslider.featured-posts-slider .flex-direction-nav a:before {
+      background: rgba(0, 0, 0, 0.4);
+      color: #fff;
+      height: 50px;
+      padding: 0;
+      width: 40px; }
+  .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 600px;
+    position: relative;
+    width: 100%; }
+    @media (max-width: 768px) {
+      .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide {
+        height: 380px; } }
+    @media (max-width: 480px) {
+      .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide {
+        height: 155px; } }
+    .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content {
+      background: #626262;
+      height: 100%;
       left: 0;
       position: absolute;
       top: 0;
-      height: 100%;
-      z-index: 2;
-      width: 100%; }
-    .featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .slide-inner {
-      display: table;
-      height: 100%;
-      margin: 0 auto;
-      width: 80%; }
-    .featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .slide-inner-cell {
-      display: table-cell;
-      vertical-align: middle;
-      width: 100%; }
-    .featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-meta {
-      margin: 0;
-      position: relative;
+      overflow: hidden;
+      width: 100%;
       z-index: 3; }
-      @media (max-width: 320px) {
-        .featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-meta {
-          display: none; } }
-      .featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-meta span,
-      .featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-meta a {
+      .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .slide-entry-link {
+        display: block;
+        left: 0;
+        position: absolute;
+        top: 0;
+        height: 100%;
+        z-index: 2;
+        width: 100%; }
+      .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .slide-inner {
+        display: table;
+        height: 100%;
+        margin: 0 auto;
+        width: 80%; }
+      .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .slide-inner-cell {
+        display: table-cell;
+        padding-top: 157px;
+        width: 100%; }
+      .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-meta {
+        letter-spacing: .2em; }
+        .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-meta span {
+          color: #fff; }
+      .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-title {
         color: #fff;
-        font-size: 12px; }
-    .featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-title {
-      color: #fff;
-      font-size: 25px;
-      margin: 1em 0;
-      position: relative;
-      z-index: 3; }
-    .featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-button {
-      margin-top: 18px;
-      position: relative;
-      text-align: center; }
-      .featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-button::after {
-        clear: both;
-        content: "";
-        display: table; }
-      .featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-button .entry-button-link {
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        -ms-appearance: none;
-        -o-appearance: none;
-        appearance: none;
-        color: #fff;
-        cursor: pointer;
-        background: transparent;
-        border: 2px solid #fff;
-        display: inline-block;
-        font-size: 12px;
-        padding: 0.5em 1.75em;
+        font-size: 34.1328px;
+        font-size: 2.1333rem;
+        margin: 1em 0 1.65em;
         position: relative;
-        text-align: center;
-        text-decoration: none;
-        text-transform: uppercase;
-        -webkit-transition: all 0.15s ease-in-out;
-        -moz-transition: all 0.15s ease-in-out;
-        transition: all 0.15s ease-in-out;
         z-index: 3; }
-        .featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-button .entry-button-link:hover {
-          background: #fff;
-          color: #2d2d2d; }
+      .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-button {
+        font-size: 13px !important;
+        margin-top: 18px;
+        position: relative;
+        text-align: center; }
+        .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-button::after {
+          clear: both;
+          content: "";
+          display: table; }
+        .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-button .button, .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-button .page-links span:not(.page-links-title), .page-links .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-button span:not(.page-links-title), .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-button #page #infinite-handle span button, #page #infinite-handle span .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-button button {
+          background: transparent;
+          border-color: #fff;
+          color: #fff;
+          letter-spacing: .2em;
+          z-index: 3; }
+          .featured-posts-slides .slide-entry-link:hover .button, .featured-posts-slides .slide-entry-link:hover .page-links span:not(.page-links-title), .page-links .featured-posts-slides .slide-entry-link:hover span:not(.page-links-title), .featured-posts-slides .slide-entry-link:hover #page #infinite-handle span button, #page #infinite-handle span .featured-posts-slides .slide-entry-link:hover button {
+            background: #fff;
+            color: #2d2d2d; }
