--- a/style.css
+++ b/style.css
@@ -990,6 +990,54 @@ a {
   margin-bottom: 4em; }
 
 /*--------------------------------------------------------------
+## Calendar Widget
+--------------------------------------------------------------*/
+.widget #wp-calendar {
+  border: none;
+  margin: 0; }
+  .widget #wp-calendar caption {
+    color: #2d2d2d;
+    font-size: 13.8656px;
+    font-size: 0.8666rem;
+    font-weight: 700;
+    text-align: right;
+    text-transform: uppercase; }
+  .widget #wp-calendar tr:nth-child(2n+2) {
+    background: none; }
+  .widget #wp-calendar th,
+  .widget #wp-calendar td {
+    border: 1px solid #fff;
+    padding: 0; }
+  .widget #wp-calendar thead tr {
+    background: none; }
+  .widget #wp-calendar thead th {
+    text-align: center;
+    padding-bottom: .5em; }
+  .widget #wp-calendar tbody {
+    font-size: 14.9328px;
+    font-size: 0.9333rem; }
+    .widget #wp-calendar tbody .pad {
+      background: none; }
+    .widget #wp-calendar tbody td {
+      background: #f4f4f4;
+      text-align: center; }
+      .widget #wp-calendar tbody td:hover {
+        background: #fff; }
+      .widget #wp-calendar tbody td a {
+        border-bottom: none;
+        display: block; }
+        .widget #wp-calendar tbody td a:hover {
+          border-bottom: none; }
+  .widget #wp-calendar tfoot {
+    font-size: 14.9328px;
+    font-size: 0.9333rem; }
+    .widget #wp-calendar tfoot #prev,
+    .widget #wp-calendar tfoot #next {
+      padding-top: .5em; }
+    .widget #wp-calendar tfoot #next {
+      text-align: right; }
+
+/*--------------------------------------------------------------
 ## Recent Posts Widget
 --------------------------------------------------------------*/
 .widget_recent_entries a {
