Full screen search heading style

--- a/sass/site/header/_search.scss
+++ b/sass/site/header/_search.scss
@@ -19,7 +19,7 @@
 		font-family: $font__details;
 		@include font-size(1.0666);
 		font-weight: 400;
-		letter-spacing: 1px;
+		letter-spacing: .2em;
 		text-align: center; 
 		text-transform: uppercase; 
 	}	
